# mapartProcessor

./: .gitignore  CMakeLists.txt  README.md
old_src/: clipboard.c
old_src/load_palette/: load_palette.c  load_palette.h
resources/opencl/: color_conversions.cl  dither.cl  mapart.cl  progress.cl
resources/opencl/color/: color_conversion.cl  color_conversions.cl
resources/opencl/dither/: dithering.cl
resources/opencl/dithering/: JJND.cl  atkinson.cl  burkes.cl  error_bleeding.cl  floyd.cl  none.cl  sierra.cl  sierra2.cl  sierraL.cl  stucki.cl
resources/opencl/mapart/: mapart.cl
resources/opencl/progress/: progress.cl
resources/palette/: palette1.json  palette_all.json  palette_bg.json  palette_bw.json  palette_gray.json
src/: main.c
src/commands/generate_rows/: gen_rows.c  gen_rows.h
src/commands/list_images/: list_images.c  list_images.h
src/commands/load/: load.c  load.h
src/commands/load_image/: load_image.c  load_image.h
src/commands/load_palette/: load_palette.c  load_palette.h
src/libs/: globaldefs.c  globaldefs.h  globaltypes.h  logger.c  logger.h
src/libs/alloc/: tracked.c  tracked.h
src/libs/images/: stb_image.h
src/libs/litematica/: litematica.c  litematica.h  nbt.h  tagutils.c  tagutils.h
src/opencl/: gpu.c  gpu.h
